# routes/api.php
@@ -9,5 +9,6 @@ Route::prefix('v1')->group(function () {
         Route::post('/images', [ImageController::class, 'store'])->name('api.v1.images.store');
         Route::get('/moments', [MomentController::class, 'index'])->name('api.v1.moments.index');
         Route::post('/moments', [MomentController::class, 'store'])->name('api.v1.moments.store');
+        Route::patch('/moments/{moment}', [MomentController::class, 'update'])->name('api.v1.moments.update');
     });
 });
